--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /src/OverlayChanger/bin/Debug
 /src/OverlayChanger/obj/Debug
 /src/.vs/OverlayChanger/v14
+/src/OverlayChanger/OverlayChanger_TemporaryKey.pfx
+/src/OverlayChanger/OverlayChanger.csproj.user
